# order-matching-engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: MatchingEngine.cpp  MatchingEngine.hpp  Order.hpp  OrderBook.cpp  OrderBook.hpp  main.cpp
src/benchmarking/: benchmarkConcurrent.cpp  benchmarkSimple.cpp
src/concurrency/: LockFreeOrderBuffer.cpp  LockFreeOrderBuffer.hpp  OrderBuffer.cpp  OrderBuffer.hpp
src/core/: MatchingEngine.cpp  MatchingEngine.hpp  Order.hpp  OrderBook.cpp  OrderBook.hpp  Trade.hpp
src/listeners/: TradeListener.hpp  TradeLogger.cpp  TradeLogger.hpp  TradeNotifier.cpp  TradeNotifier.hpp
src/networking/: OrderSerializer.cpp  OrderSerializer.hpp  client.cpp  common.cpp  common.hpp  server.cpp  server.hpp
tests/: CMakeLists.txt  CTestTestfile.cmake  test_matchingengine.cpp  test_orderbook.cpp  test_orderbuffer.cpp
